--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "@slidev/theme-default": "*",
     "@slidev/theme-seriph": "*"
   },
-  "name": "slidev-practical-introduction-to-angular"
+  "name": "slidev-practical-introduction-to-angular",
+  "devDependencies": {
+    "@types/mermaid": "^8.2.9"
+  }
 }
