--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "build": "slidev build",
+    "build": "slidev build --base /practical-intro-to-angular/",
     "dev": "slidev --open",
     "export": "slidev export"
   },
